<resources>
    <string name="app_name">YukMangan</string>
    <string name="masuk">MASUK</string>
    <string name="daftar">DAFTAR</string>
    <string name="Nama">Pakde</string>
    <string name="Donasi">Donasi</string>
    <string name="Jumlah">100,000</string>
    <string name="Email">Email Pakde@gmail.com</string>
    <string name="NoHp">No Hp 081279345676</string>
    <string name="Alamat">Alamat Jakarta Selatan</string>
    <string name="tgl_gabung">Tanggal Daftar 12-04-2020</string>
    <string name="Update">Edit</string>
    <string name="Logout">Logout</string>
    <string name="sts">Status</string>
    <string name="dummytext">Li Europan lingues es membres del sam familie. Lor separat existentie es un myth. Por scientie, musica, sport etc, litot Europa usa li sam vocabular. Li lingues differe solmen in li grammatica, li pronunciation e li plu commun vocabules. Omnicos directe al desirabilite de un nov lingua franca: On refusa continuar payar custosi traductores. At solmen va esser necessi far uniform grammatica, pronunciation e plu sommun paroles. Ma quande lingues coalesce, li grammatica del resultant lingue es plu simplic e regulari quam ti del coalescent lingues. Li nov lingua franca va esser plu simplic e regulari quam li existent Europan lingues. It va esser tam simplic quam Occidental in fact, it va esser Occidenta</string>
    <string name="member">Member</string>
    <string name="lkp">Lengkapi Data Diri Anda</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="chat">Chat</string>
    <string name="account">Account</string>
    <string name="help">Help</string>
    <string name="headerdashboard">Kasus COVID-19 di Indonesia</string>
    <string name="textdashboard">Yuk Gabung\nGerakan Mandiri Pangan\nSelamatkan Tetangga Kita\nDari Ancaman\nKesulitan Pangan\n#BersamaLawanCovid19</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_relawan">DASHBOARD RELAWAN</string>
    <string name="dummy_text">RW. 07 Rancaekek Kencana Kab. Bandung</string>
    <string name="informasi_patungan_mandiri_pangan">Informasi Patungan Mandiri Pangan</string>
    <string name="saldo">Saldo</string>
    <string name="stok_beras">Stok Beras</string>
    <string name="warga_darurat_terbaru">Warga Darurat Terbaru</string>
    <string name="lihat_semua"><u>Lihat Semua</u></string>
    <string name="donasi_warga_terbaru">Donasi Warga Terbaru</string>
    <string name="lihat_detail">Lihat Detail</string>
    <string name="nomer_rek_resmi_rw">Nomer Rekeneing Resmi Rw 7 : 0200 583545 BNI Syariah An. Ruhaya</string>
</resources>
