<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.home.Profile">
<View
    android:background="@drawable/bgview"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/_190sdp"
    android:layout_alignParentTop="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentLeft="true"/>
<TextView
    android:id="@+id/txt_back"
    android:textSize="@dimen/_14sdp"
    android:drawableLeft="@drawable/ic_back"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>
    <ImageView
        android:padding="@dimen/_10sdp"
        android:background="@drawable/circleview"
        android:id="@+id/img_profile"
        android:layout_width="@dimen/_75sdp"
        android:layout_height="@dimen/_75sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:src="@drawable/profile"/>
    <TextView
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="false"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:textColor="@color/white"
        android:fontFamily="sans-serif"
        android:textSize="@dimen/_12sdp"
        android:id="@+id/txt_nama"
        android:text="@string/Nama"
        android:layout_below="@id/img_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

     <androidx.cardview.widget.CardView
         android:id="@+id/card"
         android:layout_below="@id/txt_nama"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_2sdp"
         android:layout_marginRight="@dimen/_12sdp"
         android:layout_marginLeft="@dimen/_12sdp"
         app:cardCornerRadius="@dimen/_12sdp"
         android:elevation="@dimen/_20sdp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/gbr_uang"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/ic_saldo"
                    android:padding="@dimen/_6sdp"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"/>
                <TextView
                    android:layout_toRightOf="@id/gbr_uang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:layout_marginBottom="@dimen/_12sdp"
                    android:layout_weight="1"
                    android:fontFamily="@font/robotomedium"
                    android:gravity="left"
                    android:text="@string/Donasi"
                    android:textColor="@color/text_black2"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:layout_toRightOf="@id/gbr_uang"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/robotomedium"
                    android:text="@string/Jumlah"
                    android:layout_gravity="center"
                    android:textColor="@color/deaths"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_12sdp"
                    android:gravity="left" />
                <ImageView
                    android:id="@+id/gbr_status"
                    android:layout_below="@id/gbr_uang"
                    android:src="@drawable/ic_person"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    tools:ignore="VectorDrawableCompat" />
                <TextView
                    android:id="@+id/txt_status"
                    android:drawableRight="@drawable/ic_update"
                    android:textColor="@color/text_black2"
                    android:textSize="@dimen/_12sdp"
                    android:text="@string/sts"
                    android:fontFamily="@font/robotomedium"
                    android:layout_below="@id/gbr_uang"
                    android:layout_toRightOf="@id/gbr_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"/>
                <TextView
                    android:id="@+id/txt_member"
                    android:drawableRight="@drawable/ic_check"
                    android:textColor="@color/text_black2"
                    android:textSize="@dimen/_12sdp"
                    android:text="@string/member"
                    android:fontFamily="@font/robotomedium"
                    android:layout_below="@id/txt_status"
                    android:layout_toRightOf="@id/gbr_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"/>
            </RelativeLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
    <RelativeLayout
        android:layout_below="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_12sdp">
        <TextView
           android:drawableStart="@drawable/ic_phone"
            android:id="@+id/hp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotomedium"
            android:text="@string/NoHp"
            android:layout_gravity="center"
            android:textColor="@color/text_black2"
            android:textSize="@dimen/_12sdp"
            android:gravity="left"
            tools:ignore="RtlCompat" />
        <TextView
            android:drawableStart="@drawable/ic_email"
            android:id="@+id/email"
            android:layout_below="@id/hp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="@dimen/_12sdp"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotomedium"
            android:text="@string/Email"
            android:layout_gravity="center"
            android:textColor="@color/text_black2"
            android:textSize="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:gravity="left"
            android:drawableLeft="@drawable/ic_email" />
        <TextView
            android:drawableLeft="@drawable/ic_add_location_black_24dp"
            android:id="@+id/almt"
            android:layout_below="@id/email"
            android:layout_marginTop="@dimen/_1sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotomedium"
            android:text="@string/Alamat"
            android:layout_gravity="center"
            android:textColor="@color/text_black2"
            android:textSize="@dimen/_12sdp"
            android:gravity="left" />

        <TextView
            android:id="@+id/tgl_gabung"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/almt"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="@dimen/_12sdp"
            android:drawableLeft="@drawable/ic_date_range"
            android:fontFamily="@font/robotomedium"
            android:gravity="left"
            android:text="@string/tgl_gabung"
            android:textColor="@color/text_black2"
            android:textSize="@dimen/_12sdp" />

        <Button
            android:id="@+id/btn_profile_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tgl_gabung"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_80sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:background="@drawable/bg_button_primary"
            android:fontFamily="@font/robotomedium"
            android:text="@string/Update"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_18sdp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_profile_update"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:background="@drawable/bg_button_primary"
            android:fontFamily="@font/robotomedium"
            android:text="@string/Logout"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_18sdp" />
    </RelativeLayout>

</RelativeLayout>